<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_level_bg"
    android:divider="@color/color_app_divide"
    android:dividerPadding="0.5dp"
    android:orientation="vertical"
    android:padding="20dp"
    android:showDividers="middle">

    <TextView
        android:id="@+id/gender_male"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/male"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/gender_female"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/female"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/gender_none"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/in_secret"
        android:textColor="@color/black"
        android:textSize="16sp" />

</LinearLayout>