<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app_background"
    tools:context="cn.nano.main.login.LoginActivity">

    <cn.nano.common.widget.ArcImageView
        android:id="@+id/login_header_bg"
        android:layout_width="match_parent"
        android:layout_height="249dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/bg_login"
        app:arcHeight="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/login_music_ico"
        android:layout_width="52dp"
        android:layout_height="65dp"
        android:layout_marginTop="50dp"
        android:background="@mipmap/ico_music"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:text="@string/login_more_video"
        android:textColor="@color/white"
        app:layout_constraintRight_toLeftOf="@id/login_music_ico"
        app:layout_constraintTop_toTopOf="@id/login_music_ico" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/login_just_here"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/login_music_ico"
        app:layout_constraintLeft_toRightOf="@id/login_music_ico" />

    <androidx.cardview.widget.CardView
        android:id="@+id/login_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_header_bg">

        <cn.nano.main.view.EditCustomView
            android:id="@+id/login_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/common_space"
            android:layout_marginTop="30dp"
            android:layout_marginRight="@dimen/common_space"
            app:hint="@string/login_phone_hint"
            app:icon="@mipmap/ico_phone" />

        <cn.nano.main.view.EditCustomView
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/common_space"
            android:layout_marginTop="90dp"
            android:layout_marginRight="@dimen/common_space"
            app:hint="@string/login_password_hint"
            app:icon="@mipmap/ico_psw" />

        <TextView
            android:id="@+id/login_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="@dimen/common_space"
            android:layout_marginTop="150dp"
            android:layout_marginRight="@dimen/common_space"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/login_forget_password"
            android:textColor="@color/color_app_edit_hint"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_space"
            android:layout_marginTop="150dp"
            android:layout_marginRight="@dimen/common_space"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/login_register_now"
            android:textColor="@color/color_app_main"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/login_login_now"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="@dimen/common_space"
            android:layout_marginTop="200dp"
            android:layout_marginRight="@dimen/common_space"
            android:layout_marginBottom="30dp"
            android:background="@drawable/shape_login_button_color"
            android:gravity="center"
            android:text="@string/login_login_now"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>